<resources>
    <string name="app_name">中国汽商中心</string>
    <string name="common_toast_sdcarderror">SD卡不可用，请确认您的SD卡可以正常使用</string>
    <string name="common_toast_sdcardspaceerror">SD卡空间不足</string>
    <string name="common_toast_connectionfailed">网络连接失败</string>
    <string name="common_toast_connectionnodata">获取数据失败，请重试</string>
    <string name="common_toast_jsonparseerror">JSON解析数据出错</string>
    <string name="common_toast_error">操作失败</string>
    <string name="common_toast_exitapp">再按一次退出程序</string>
    <string name="common_toast_location_failed">定位失败</string>
    <string name="common_toast_location_loading">正在定位...</string>
    <string name="common_toast_location_complete">定位完成</string>
    <string name="common_toast_send_sms_code">验证码已发送，请注意查收短信</string>
    <string name="common_label_ok">确定</string>
    <string name="common_label_last_page">已是最后一页</string>
    <string name="common_label_cancel">取消</string>
    <string name="common_label_yes">是</string>
    <string name="common_label_no">否</string>
    <string name="common_label_gotologin">登录</string>
    <string name="common_label_unlogin">您现在还没有登录，请登录。</string>
    <string name="common_dialog_title_tips">温馨提示</string>
    <string name="common_hint_user_certificated">已核实</string>
    <string name="common_hint_user_uncertificated">未核实</string>
    <string name="search_label_nearby">附近</string>
    <string name="search_label_hotuser">热门商家</string>
    <string name="search_label_manufacturer">厂商</string>
    <string name="search_label_agency">经销商</string>
    <string name="search_label_enduser">终端客户</string>
    <string name="search_label_enduser_4sdian">4S店</string>
    <string name="search_label_enduser_kuaixiudian">快修店</string>
    <string name="search_label_enduser_qixiuchang">汽修厂</string>
    <string name="search_label_enduser_meirongdian">美容店</string>
    <string name="search_hint_keyword">请输入搜索的内容</string>
    <string name="profile_hint_login_account">账号</string>
    <string name="profile_hint_login_password">密码</string>
    <string name="profile_label_login">登陆</string>
    <string name="profile_label_back_password">找回密码</string>
    <string name="profile_label_register">注册账号</string>
    <string name="profile_label_to_login">点击跳转登陆</string>
    <string name="profile_label_photo_text">头像</string>
    <string name="profile_label_company_name_text">名称</string>
    <string name="profile_label_address_text">地址</string>
    <string name="profile_label_phone_text">电话</string>
    <string name="profile_label_company_intro_text">简介</string>
    <string name="profile_label_product_num_text">产品管理</string>
    <string name="profile_label_user_type_text">账户类型</string>
    <string name="profile_label_grade_text">会员等级</string>
    <string name="profile_label_my_info_text">我的资料</string>
    <string name="profile_label_my_favorite_text">我的收藏</string>
    <string name="profile_label_my_release_text">我的发布</string>
    <string name="profile_label_my_supply_demand_text">我的供求</string>
    <string name="profile_label_my_setting_text">设置</string>
    <string name="profile_label_my_top_text">我的</string>
    <string name="profile_label_change_company_name_text">公司名称</string>
    <string name="profile_label_vendor_text">厂商</string>
    <string name="profile_label_dealers_text">经销商</string>
    <string name="profile_label_terminal_customers_text">终端客户</string>
    <string name="profile_label_usual_user_text">普通用户</string>
    <string name="profile_label_middle_user_text">中级用户</string>
    <string name="profile_label_vip_user_text">VIP</string>
    <string name="profile_label_product_manage_list_text">产品管理</string>
    <string name="profile_label_user_type_prompt_text">提交后，我们会在24小时内审核完毕。</string>
    <string name="profile_label_grade_equity_text">等级权益</string>
    <string name="profile_label_my_favorite_supply_text">供应</string>
    <string name="profile_label_my_favorite_demand_text">求购</string>
    <string name="profile_label_back_password_valid_code_text">填写验证码</string>
    <string name="profile_label_input_valid_code_text">请输入收到的短信验证码:</string>
    <string name="profile_label_next_text">下一步</string>
    <string name="profile_label_valid_getting_text">验证码获取中...</string>
    <string name="profile_label_valid_code_validing_text">验证码验证中...</string>
    <string name="profile_label_sure_text">确认</string>
    <string name="profile_hint_sure_password_text">请确认密码</string>
    <string name="profile_hint_please_input_password_text">请输入密码</string>
    <string name="profile_label_please_set_password_text">请设置密码:</string>
    <string name="profile_label_password_postting_text">密码提交中...</string>
    <string name="profile_label_share_setting_text">分享设置</string>
    <string name="profile_label_is_share_empower_text">是否清除分享设置</string>
    <string name="profile_label_yes_text">是</string>
    <string name="profile_label_no_text">否</string>
    <string name="profile_label_four_s_text">4s店</string>
    <string name="profile_label_quick_repair_text">快修店</string>
    <string name="profile_label_car_repair_factory_text">汽修厂</string>
    <string name="profile_label_car_improve_looks_text">美容店</string>
    <string name="profile_toast_retroaction_success_text">提交成功</string>
    <string name="profile_toast_upload_photo_success_text">头像上传成功</string>
    <string name="profile_label_revise_sure_text">修改密码</string>
    <string name="profile_label_revise_password_input_old_text">请输入旧密码</string>
    <string name="profile_label_revise_password_input_new_text">请输入新密码</string>
    <string name="profile_label_revise_password_postting_text"> 提交中...</string>
    <string name="profile_label_post_valid_code_text">　发送验证码　</string>
    <string name="profile_label_repost_valid_code_text">重新发送验证码</string>
    <string name="profile_label_registe_account_input_text">中国 +86</string>
    <string name="profile_label_registe_choose_agree_text">我已阅读并同意使用条款和隐私政策</string>
    <string name="profile_label_registe_account_layout_text">验证手机号</string>
    <string name="profile_hint_registe_account_input_text">请输入手机号</string>
    <string name="profile_label_get_password_text">获取密码</string>
    <string name="profile_label_set_password_layout_text">请设置密码</string>
    <string name="profile_label_my_release_list_text">我的供求</string>
    <string name="profile_label_release_list_text">发布</string>
    <string name="profile_label_release_text">我要发布</string>
    <string name="profile_label_input_title_text">请输入标题</string>
    <string name="profile_label_choose_area_text">选择地区（不选代表全国）</string>
    <string name="profile_label_input_detail_content_text">请输入详细内容</string>
    <string name="profile_label_sure_release_text">确认发布</string>
    <string name="profile_label_my_setting_two_dimension_code_text">二维码</string>
    <string name="profile_label_my_setting_share_text">分享</string>
    <string name="profile_label_my_setting_push_information_text">推送通知</string>
    <string name="profile_label_my_setting_retroaction_text">反馈</string>
    <string name="profile_label_my_setting_give_grade_text">评分</string>
    <string name="profile_label_my_setting_version_text">版本</string>
    <string name="profile_label_my_setting_about_text">关于</string>
    <string name="profile_label_my_setting_login_out_text">退出登陆</string>
    <string name="profile_label_account_text">账号：</string>
    <string name="profile_label_registe_text">注册</string>
    <string name="profile_label_change_province_city_county_text">修改省市区地址</string>
    <string name="profile_hint_write_address_text">请填写详细地址</string>
    <string name="profile_label_save_button_text">保存</string>
    <string name="profile_label_logining_text">登录中...</string>
    <string name="profile_label_not_iscertificated_text">未核实</string>
    <string name="profile_label_delete_text">删除</string>
    <string name="profile_label_cancel_text">取消</string>
    <string name="gl_choose_title">请选择图片</string>
    <string name="profile_label_retroaction_text">欢迎您提出宝贵的意见和建议，您留下的每个字都将用来改善我们的软件。</string>
    <string name="profile_hint_your_idea_text">请输入您的反馈意见（500字以内）</string>
    <string name="profile_label_sure_post_text">确认发送</string>
    <string name="profile_about_text">中国汽商中心是一个建立在现代智能手机上的APP移动平台，是以汽配行业为主要服务群体的营销平台。利用现有的APP移动互联网技术，打造移动式网络营销平台，中国汽商中心所带来的移动网络营销模式借助彩信，短信群发，WAP，二维码，手机客户端等手机和移动互联网技术，这些技术具有灵活性，互动性，传播性，目标受众准确的特点。为企业构造良好的平台跨入未来的移动联网营销时代。</string>
    <string name="profile_label_my_setting_about_url_text">网址：</string>
    <string name="profile_label_my_setting_about_the_url_text">http://www.chinaqszx.com</string>
    <string name="profile_label_my_setting_about_soft_version_text">软件版本：</string>
    <string name="profile_toast_login_failure_text">登陆失败</string>
    <string name="profile_toast_search_failure_text">查询失败</string>
    <string name="profile_toast_repeat_login_text">您已登陆,不要重复登录！</string>
    <string name="profile_toast_unlogin_text">没有登陆</string>
    <string name="profile_toast_please_perfect_password_text">请完善密码</string>
    <string name="profile_toast_revise_password_success_text">修改密码成功</string>
    <string name="profile_toast_load_data_failure_text">加载数据失败</string>
    <string name="profile_toast_revise_user_type_success_text">修改成功</string>
    <string name="profile_toast_revise_user_type_failure_text">修改失败</string>
    <string name="profile_toast_revise_grade_success_text">修改成功</string>
    <string name="profile_toast_revise_grade_failure_text">修改失败</string>
    <string name="profile_toast_revise_success_text">修改成功</string>
    <string name="profile_toast_revise_fail_text">修改失败</string>
    <string name="profile_toast_revise_nothing_text">您没有修改任何信息</string>
    <string name="profile_toast_revise_province_city_county_success_text">修改成功</string>
    <string name="profile_toast_revise_province_city_county_failure_text">修改失败</string>
    <string name="profile_toast_you_choose_cancel_text">你选择了取消</string>
    <string name="profile_toast_delete_success_text">删除成功</string>
    <string name="profile_toast_delete_failure_text">删除失败</string>
    <string name="profile_toast_login_out_success_text">退出登陆成功</string>
    <string name="profile_toast_login_out_failure_text">退出登陆失败</string>
    <string name="profile_toast_account_no_allow_empty_text">手机号不能为空</string>
    <string name="profile_toast_you_not_agree_text">您没有同意</string>
    <string name="profile_toast_mobile_invalid">请输入正确的手机号</string>
    <string name="profile_toast_get_valid_code_failure_text">获取验证码失败</string>
    <string name="profile_toast_please_input_six_valid_code_text">请输入6位的验证码</string>
    <string name="profile_toast_valid_code_valid_failure_text">验证码验证失败</string>
    <string name="profile_toast_get_valid_code_success_text">获取验证码成功</string>
    <string name="profile_toast_password_unsame_text">您两次输入的密码不一致</string>
    <string name="profile_toast_set_password_success_to_login_text">设置密码成功，请登录</string>
    <string name="profile_toast_set_password_failure_text">设置密码失败</string>
    <string name="profile_toast_release_information_un_complete_text">您发布的信息不完整</string>
    <string name="profile_toast_release_success_text">发布成功</string>
    <string name="profile_toast_release_failure_text">发布失败</string>
    <string name="profile_toast_account_pwd_empty_text">用户名或密码为空</string>
    <string name="profile_label_not_perfect_tips">请完善您的资料，完善的资料可以提高商家信誉，增加曝光率。</string>
    <string name="profile_label_dialog_message_is_login_out_text">是否确认退出登录</string>
    <string name="profile_label_dialog_sure_button_login_out_text">退出登录</string>
    <string name="profile_label_dialog_cancel_button_cancel_text">取消</string>
    <string name="list_map_title_lable">地图</string>
    <string name="list_map_button_mylocation">我的位置</string>
    <string name="list_map_button_aimlocation">目标位置</string>
    <string name="list_map_button_step">路线规划</string>
    <string name="popupwindow_search_type_product">产品</string>
    <string name="popupwindow_search_type_manufacturer">厂商</string>
    <string name="popupwindow_search_type_agency">经销商</string>
    <string name="popupwindow_search_type_enduser">终端客户</string>
</resources>