<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_user_info_background"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@color/common_actionbar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/companyinfo_lable_back_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onSetPasswordBackClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/Widget.ActionbarTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/profile_label_set_password_layout_text" />
    </FrameLayout>

    <ScrollView
        style="@style/Widget.GammaScrollbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_label_please_set_password_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_input_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/profile_round_edittext"
                android:hint="@string/profile_hint_please_input_password_text"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_input_new_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/profile_round_edittext"
                android:hint="@string/profile_hint_sure_password_text"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/profile_setting_password_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/profile_login_button_selecter"
                android:onClick="onSetPasswordSureClick"
                android:padding="10dp"
                android:text="@string/profile_label_sure_text"
                android:textColor="@color/common_activity_bg"
                android:textSize="@dimen/profile_first_title_font_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>