<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_user_info_background"
    android:orientation="vertical" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@color/common_actionbar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
		<ImageView
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:gravity="center"
		    android:src="@drawable/ic_back"
		    android:paddingRight="15dp"
		    android:paddingLeft="15dp"
		    android:clickable="true"
		    android:background="@drawable/companyinfo_lable_back_selector"
		    android:onClick="onBackClick"
		    />
        <TextView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        style="@style/Widget.ActionbarTextView"
	        android:text="@string/profile_label_revise_sure_text"
	        android:gravity="center"/>	    
    </FrameLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp">
	    <EditText
	        android:id="@+id/profile_revise_password_input_old_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/profile_round_edittext"
	        android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:textSize="18sp"
            android:hint="@string/profile_label_revise_password_input_old_text"/>
	    <EditText
	        android:id="@+id/profile_revise_password_input_new_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/profile_round_edittext"
	        android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:textSize="18sp"
            android:hint="@string/profile_label_revise_password_input_new_text"/>
	    <Button
	        android:id="@+id/profile_revise_post_password_sure"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/profile_login_button_selecter"
            android:layout_marginTop="20dp"
	        android:text="@string/profile_label_sure_text"
	        android:textSize="@dimen/profile_first_title_font_size"
	        android:textColor="@color/common_activity_bg"
	        android:padding="10dp"
	        android:onClick="onRevisePasswordSureClick"/>
	</LinearLayout>
</LinearLayout>
