<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@color/common_actionbar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
		
		<ImageView
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:gravity="center"
		    android:src="@drawable/ic_back"
		    android:paddingRight="15dp"
		    android:paddingLeft="15dp"
		    android:clickable="true"
		    
		    android:background="@drawable/companyinfo_lable_back_selector"
		    android:onClick="back"
		    />

        <TextView
            android:id="@+id/companyinfo_labl_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.ActionbarTextView"
            android:text="@string/list_map_title_lable"
            android:gravity="center"
             />	    
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/map_parent_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
            <com.baidu.mapapi.map.MapView 
                	android:id="@+id/bmapsView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true" />
            <Button
		         android:layout_width="80dp"
		         android:layout_height="40dp"
		         android:layout_alignParentRight="true"
		         android:layout_alignParentTop="true"
		         android:layout_marginRight="10dp"
		         android:layout_marginTop="10dp"
		         android:onClick="toAimLocation"
		         android:text="@string/list_map_button_aimlocation" 
		         android:textColor="#FF000000" />
            
            <Button
                android:id="@+id/myLocation"
		         android:layout_width="80dp"
		         android:layout_height="40dp"
		         android:layout_alignParentRight="true"
		         android:layout_alignParentTop="true"
		         android:layout_marginRight="10dp"
		         android:layout_marginTop="60dp"
		         android:onClick="toMyLocation"
		         android:text="@string/list_map_button_mylocation" 
		         android:textColor="#FF000000" />
            
         <Button
             	 android:id="@+id/showPath"
		         android:layout_width="80dp"
		         android:layout_height="40dp"
		         android:layout_alignParentRight="true"
		         android:layout_alignParentTop="true"
		         android:layout_marginRight="10dp"
		         android:layout_marginTop="110dp"
		         android:onClick="showPath"
		         android:text="@string/list_map_button_step" 
		         android:textColor="#FF000000" />
            </RelativeLayout>
</LinearLayout>
