<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_user_info_background"
    android:orientation="vertical" >
    <FrameLayout
        android:id="@+id/fl_my_setting_retrocation_titleview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@color/common_actionbar_bg"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
		<ImageView
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:gravity="center"
		    android:src="@drawable/ic_back"
		    android:paddingRight="15dp"
		    android:paddingLeft="15dp"
		    android:clickable="true"
		    android:background="@drawable/companyinfo_lable_back_selector"
		    android:onClick="onBackClick"/>
        <TextView
            android:id="@+id/profile_my_setting_retroaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.ActionbarTextView"
            android:text="@string/profile_label_my_setting_retroaction_text"
            android:gravity="center"/>	    
    </FrameLayout>
	<ScrollView
        android:layout_below="@id/fl_my_setting_retrocation_titleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/profile_user_info_background"
        style="@style/Widget.GammaScrollbar">
        <RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
	        <TextView
			    android:id="@+id/tv_my_setting_retrocation_tips"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="20dp"
			    android:layout_alignParentTop="true"
			    android:textSize="16sp"
			    android:text="@string/profile_label_retroaction_text"/>
			<EditText
			    android:id="@+id/profile_retroaction_edittext"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="20dp"
			    android:padding="10dp"
			    android:gravity="top"
			    android:hint="@string/profile_hint_your_idea_text"
			    android:background="@drawable/profile_round_edittext"
			    android:layout_below="@id/tv_my_setting_retrocation_tips"
			    android:scrollbars="vertical"
			    android:minLines="4"
				android:inputType="textMultiLine"/>
			<Button
			    android:id="@+id/btn_my_setting_retrocation_ok"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="20dp"
			    android:layout_marginBottom="40dp"
			    android:textSize="18sp"
			    android:textColor="@color/common_activity_bg"
			    android:background="@drawable/profile_login_button_selecter"
			    android:layout_below="@id/profile_retroaction_edittext"
			    android:padding="10dp"
			    android:text="@string/profile_label_sure_post_text"
			    android:onClick="onSurePostClick"/>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
