<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@color/common_actionbar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
		<ImageView
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:gravity="center"
		    android:src="@drawable/ic_back"
		    android:paddingRight="15dp"
		    android:paddingLeft="15dp"
		    android:clickable="true"
		    android:background="@drawable/companyinfo_lable_back_selector"
		    android:onClick="onBackClick"
		    />
		<TextView
		    android:id="@+id/profile_my_release_text"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        style="@style/Widget.ActionbarTextView"
	        android:text="@string/profile_label_release_list_text"
	        android:gravity="center"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"        
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <RadioGroup
            android:id="@+id/profile_supple_demand_select_type"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:background="@drawable/common_corner_bg"
	        android:gravity="center_vertical"
	        android:orientation="horizontal"
	        android:weightSum="2.0" >
	        <RadioButton
	            android:id="@+id/profile_I_will_release_supply"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_marginRight="1dp"
	            android:layout_weight="1.0"
	            android:background="@drawable/common_corner_left_bg_selector"
	            android:textColor="@drawable/common_corner_tc_selector"
	            android:button="@null"
	            android:gravity="center"
	            android:paddingBottom="8dp"
	            android:paddingTop="8dp"
	            android:text="@string/profile_label_my_favorite_supply_text"
	            android:checked="true" />
	        <RadioButton
	            android:id="@+id/profile_I_will_release_demand"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1.0"
	            android:background="@drawable/common_corner_right_bg_selector"
	            android:textColor="@drawable/common_corner_tc_selector"
	            android:button="@null"
	            android:gravity="center"
	            android:paddingBottom="8dp"
	            android:paddingTop="8dp"
	            android:text="@string/profile_label_my_favorite_demand_text" />
	    </RadioGroup>
    </LinearLayout>
    <View 
	   android:layout_height="1dp" 
	   android:background="#D5D5D5" 
	   android:layout_width="wrap_content">
	</View>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:orientation="vertical" >
        <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:orientation="horizontal">
	        <EditText
	            android:id="@+id/profile_my_release_title"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="10dp"
	            android:textSize="15sp"
	        	android:clickable="true"
	            android:background="@drawable/profile_round_edittext"/>
	        <RelativeLayout
	            android:id="@+id/profile_relative_layout_hint"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:gravity="center_vertical|center_horizontal"
	            android:clickable="true"
	            android:onClick="onRelativeLayoutClick"
	            android:visibility="visible">
	            <ImageView
	                android:id="@+id/profile_release_title_image"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
		            android:src="@drawable/profile_release_title_image"/>
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:text="@string/profile_label_input_title_text"
	                android:textColor="@color/profile_my_release_text_color"
	                android:layout_toRightOf="@id/profile_release_title_image"/>
	        </RelativeLayout>
        </FrameLayout>
        <TextView
            android:id="@+id/profile_show_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/profile_round_edittext"
            android:text="@string/profile_label_choose_area_text"
            android:gravity="center"
            android:clickable="true"
	        android:textSize="15sp"
	        android:textColor="@color/profile_my_release_text_color"
	        android:onClick="onAreaClick"/>
        <EditText
            android:id="@+id/profile_input_detail_content"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/profile_round_edittext"
            android:hint="@string/profile_label_input_detail_content_text"
            android:textColorHint="@color/profile_my_release_text_color"
	        android:textSize="15sp"
	    	android:inputType="textMultiLine"
	    	android:gravity="center"/>
        <Button
            android:id="@+id/profile_sure_release_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_login_button_selecter"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/profile_label_sure_release_text"
            android:textColor="@color/common_activity_bg"
            android:onClick="onSureReleaseClick"/>
    </LinearLayout>
</LinearLayout>
